# - Default Launching massage & time should be there as per mock.# - Need to fix the Seconds box flickering based on number change.

--- a/src/app/countdown/countdown.component.scss
+++ b/src/app/countdown/countdown.component.scss
@@ -23,7 +23,7 @@
 
 .run{
     padding: 0 30px;
-    width: 400px;
+    width: 130px;
 }
 
 .runDiv {
@@ -31,9 +31,7 @@
   box-shadow: 0px 8px 0rem rgb(0 0 0 / 45%);
   padding: .21em;
   border-radius: 5px;
-  min-height: 500px;
   color: hsl(345, 95%, 68%);
   font-size: 6em;
   font-weight: 700;
-  min-width: 400px;
 }
